planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_15_3.jsp
nb_jobs nb_machines optimal
4 4 39 0
Times
1 3 6 7
8 5 10 10
5 4 8 9
5 5 5 3
Machines
3 1 2 4
2 3 1 4
3 4 1 2
2 1 3 4
Starts
0 5 18 26 
5 13 18 29 
1 6 10 19 
0 1 13 19 